--- a/Home.css
+++ b/Home.css
@@ -5,9 +5,11 @@ body {
 
 h1 {
     color:Black ;
+    text-align: center;
+    font-size: 100px;
 }
 
-ul.a {list-style-type: none;
+ul {list-style-type: none;
       background: #F6F093;
       padding: 20px;
       margin: 5px;
@@ -16,4 +18,6 @@ ul.a {list-style-type: none;
 
 p {
     color:Black;
+    text-align: center;
+    font-size: 100px;
 }
