--- a/Home.css
+++ b/Home.css
@@ -1,23 +1,75 @@
-body {
-    background-color: #F7EF6A;
+body {font-family: Verdana, sans-serif;}
+
+h1 {text-align: center; font-size: 100px;}
+
+h2 {text-align: center;}
+
+p1 {font-size: 15px; text-align: center;}
+
+ul.a {background: yellow}
+
+  a {display: inline; padding: 10px 30px;}
+
+  ul li {background: #ffe5e5;
+        padding: 5px;
+        margin: auto;}
+
+/* Slideshow design */
+.mySlides {display:inline-block;}
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  text-align: center;
 }
-
-
-h1 {
-    color:Black ;
-    text-align: center;
-    font-size: 100px;
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
-
-ul.a {list-style-type: none;
-      background: #F6F093;
-      padding: 20px;
-      margin: 5px;
-      display: inline-block;
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
-
-p {
-    color:Black;
-    text-align: center;
-    font-size: 100px;
+/* The dots/bullets/indicators */
+.dot {
+  height: 13px;
+  width: 13px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active {
+  background-color: #717171;
+}
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
 }
