--- a/donation.css
+++ b/donation.css
@@ -1,11 +1,13 @@
 h2{
   font-family: Papyrus;
   float: right;
+  font-size: 40px
 }
 
 #Tit {
   font-family: Papyrus;
   float: right;
+  font-size: 40px
 }
 
 div.gallery {
