--- a/donation.css
+++ b/donation.css
@@ -4,6 +4,8 @@ h2{
 
 #Tit {
   float: right;
+  font-family: Papyrus;
+  font-size: 60px;
 }
 
 div.gallery {
@@ -66,6 +68,7 @@ h2 {
 
 .secondText {
 font-size: 20px;
+font-family: Verdana;
 }
 
 .button {
