--- a/donation.css
+++ b/donation.css
@@ -12,10 +12,12 @@ h2{
 
 div.gallery {
     border: 1px solid #ccc;
+    background-color: grey;
 }
 
 div.gallery:hover {
     border: 1px solid #777;
+    background-color: grey;	
 }
 
 div.gallery img {
