--- a/donation.css
+++ b/donation.css
@@ -11,13 +11,13 @@ h2{
 }
 
 div.gallery {
-    border: 1px solid #ccc;
-    background-color: grey;
+    border: 4px solid #ccc;
+    background-color: #E7DFDF;
 }
 
 div.gallery:hover {
-    border: 1px solid #777;
-    background-color: grey;	
+    border: 4px solid #777;
+    background-color: #E7DFDF;	
 }
 
 div.gallery img {
