--- a/About_Us.css
+++ b/About_Us.css
@@ -46,8 +46,8 @@ h1 {
 }
 
 .secondText {
-  font-family: 'Century gothic';
-  font-size: 30px;
+font-size: 30px;
+font-family: century gothic;
 }
 
 .group {
